--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "json-server": "^0.17.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "nanoid": "^4.0.2",
